# module/Sete/src/V1/Rest/Municipios/MunicipiosResource.php
@@ -71,7 +71,8 @@ class MunicipiosResource extends \Sete\V1\API
                 break;
             case 'lista':
                 $pagina = (isset($_GET['pagina']) ? $_GET['pagina'] : 1);
-                $this->populaResposta(200, $this->_model->getListaPaginada($pagina), false);
+                $busca = (isset($_GET['busca']) ? $_GET['busca'] : "");
+                $this->populaResposta(200, $this->_model->getListaPaginada($pagina, $busca), false);
                 break;
         }
     }
